--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node src/index.js",
+    "start-n": "node src/index.js --username=Max",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
